@@ -3,6 +3,7 @@ require "inline_svg"
 require "kaminari"
 require "momentjs-rails"
 require "neat"
+require "inline_svg"
 require "normalize-rails"
 require "selectize-rails"
 
@@ -10,6 +11,7 @@ require "administrate/namespace"
 require "administrate/page/form"
 require "administrate/page/show"
 require "administrate/page/table"
+require "administrate/order"
 require "administrate/resource_resolver"
 require "administrate/search"
 
